--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -22,3 +22,8 @@ $table-border-color: #e9ebec !default;
 $hr-border-color: #eff0f1 !default;
 
 @import "{{ site.theme }}";
+
+.page-header {
+  background-color: $header-bg-color;
+  background-image: linear-gradient(120deg, $header-bg-color, $header-bg-color-secondary);
+}
